# uicc-analyzer

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
cyw43-patched/: .cargo_vcs_info.json
docs/: hardware_circuit_design.md  issue_tracker.md  pio_capture_proposal.md
firmware/: CMakeLists.txt
firmware/include/: logger.h
firmware/src/: logger.c  main.c
src/: atr.rs  clk_monitor.rs  io_capture.rs  main.rs  rst_monitor.rs  runner.rs  usb_log.rs
tools/: deploy_rp2350.sh  generate_hardware_diagram_pdf.py  serial_logger.py
