[package]
name = "uicc-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
pico2w = [
    "dep:cyw43",
    "dep:cyw43-firmware",
    "dep:cyw43-pio",
    "dep:static_cell",
]

[dependencies]
cortex-m-rt = "0.7"
cyw43 = { version = "0.6.0", optional = true }
cyw43-firmware = { version = "0.1.0", features = ["wifi"], optional = true }
cyw43-pio = { version = "0.9.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["critical-section-impl", "time-driver", "rp235xa"] }
embassy-time = "0.5.0"
embassy-usb-logger = "0.5.1"
heapless = "0.8"
log = "0.4"
panic-halt = "0.2"
static_cell = { version = "2.1", optional = true }

[patch.crates-io]
cyw43 = { git = "https://github.com/takao2704/uicc-analyzer.git", rev = "257aa44116943d27a74e3ed09235f1ec4af3fdfc" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
